@@ -1,5 +1,7 @@
 /* Public domain. */
 
+#include <unistd.h>
+
 int main()
 {
   unsigned long u;
